[workspace]
resolver = "2"
members = ["cachalot",
    "main",
]

[workspace.dependencies]
anyhow = "1.0"
bytes = "1.7"
chrono = "0.4"
futures-util = "0.3"
moka = "0.12"
sqlx = "0.8"
tokio = "1.39"
tracing = "0.1"

[patch.crates-io]
nfsserve = { git = "https://github.com/rrauch/nfsserve.git", rev = "dd37ee7a3457024443adcb5d64927cfd7684d8b8" }
