[package]
name = "sia_nfs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
async-recursion = "1.1"
async-trait = "0.1"
bimap = "0.6"
bytes = { workspace = true }
cachalot = { path = "../cachalot" }
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
futures-util = "0.3"
itertools = "0.13"
moka = { workspace = true, features = ["future"] }
nfsserve = "0.10"
parking_lot = "0.12"
renterd_client = { git = "https://github.com/rrauch/renterd_client.git", rev = "b6c3d08fc4e78b1304365a9a898f23b60c344cc5" }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = "0.7"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[build-dependencies]
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }
tokio = { workspace = true, features = ["full"] }