[package]
name = "sia_nfs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
async-trait = "0.1"
bimap = "0.6"
bytes = { workspace = true }
bytesize = "1.3"
cachalot = { path = "../cachalot" }
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
futures-util = { workspace = true }
itertools = "0.13"
moka = { workspace = true, features = ["future"] }
nfsserve = "0.10"
parking_lot = "0.12"
renterd_client = { git = "https://github.com/rrauch/renterd_client.git", rev = "11e947e7861e690c9d36ccf2702e0012c9f97eca" }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }
synonym = "0.1"
tokio = { workspace = true, features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[build-dependencies]
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }
tokio = { workspace = true, features = ["full"] }